<!--
  ~ Copyright (c) 2017 Cosmin Cojocea All rights reserved
  ~
  ~ This project was created and submitted by Cosmin Cojocea as part of the
  ~ Google Challenge Scholarship: Android Basics for Udacity.
  ~
  ~ According to Udacity's Honor code, your submissions must be your own work,
  ~ hence submitting this project as yours might cause you to earn the suspension of your account.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  ~ Except as contained in this notice, the name(s) of the above copyright holders shall not be used in advertising or
  ~ otherwise to promote the sale, use or other dealings in this Software without prior written authorization.
  ~
  ~
  ~
  ~
  -->

<resources>
    <string name="app_name">Tennis Counter</string>
    <string name="add_points_p1">Point</string>
    <string name="add_points_p2">Point</string>
    <string name="undo">Undo</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="sets">Sets</string>
    <string name="games">Games</string>
    <string name="points">Points</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>

</resources>
