<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    tools:context="com.example.android.ccojocea.tenniscounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_one"
                android:textSize="@dimen/font_size_xs"/>

            <TextView
                android:id="@+id/player_one_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/font_size_small"/>

            <TextView
                android:id="@+id/player_one_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/font_size_medium"/>

            <TextView
                android:id="@+id/player_one_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_large"
                android:text="0" />

            <Button
                android:id="@+id/add_points_player_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_points_p1"
                android:onClick="addPointsPlOne"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_xs"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:textSize="@dimen/font_size_small"
                android:textAllCaps="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games"
                android:textSize="@dimen/font_size_medium"
                android:textAllCaps="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textSize="@dimen/font_size_large"
                android:textAllCaps="true"/>

            <Button
                android:id="@+id/undo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undo"
                android:enabled="false"
                android:onClick="undoLastAction"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_two"
                android:textSize="@dimen/font_size_xs"/>

            <TextView
                android:id="@+id/player_two_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_small"
                android:text="0" />

            <TextView
                android:id="@+id/player_two_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/font_size_medium"/>

            <TextView
                android:id="@+id/player_two_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_large"
                android:text="0" />

            <Button
                android:id="@+id/add_points_player_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_points_p2"
                android:onClick="addPointsPlTwo"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_scores"
        android:onClick="resetScores"/>

</RelativeLayout>
